[package]
authors = ["The wasm-bindgen Developers"]
description = """
Internal multi-value transformations for wasm-bindgen
"""
documentation = "https://docs.rs/wasm-bindgen-multi-value-xform"
edition = "2021"
homepage = "https://rustwasm.github.io/wasm-bindgen/"
include = ["/LICENSE-*", "/src"]
license = "MIT OR Apache-2.0"
name = "wasm-bindgen-multi-value-xform"
repository = "https://github.com/rustwasm/wasm-bindgen/tree/master/crates/multi-value-xform"
rust-version = "1.76"
version = "0.2.93"

[dependencies]
anyhow = "1.0"
walrus = "0.21"
wasm-bindgen-wasm-conventions = { path = "../wasm-conventions", version = "=0.2.93" }

[dev-dependencies]
rayon = "1.0"
wasmprinter = "0.212"
wast = "212"
wat = "1.0"

[[test]]
harness = false
name = "all"
