[package]
name = "wasm-bindgen-shared"
version = "0.2.2"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/alexcrichton/wasm-bindgen"
homepage = "https://github.com/alexcrichton/wasm-bindgen"
documentation = "https://docs.rs/wasm-bindgen"
description = """
Shared support between wasm-bindgen and wasm-bindgen cli, an internal
dependency.
"""

[dependencies]
serde_derive = "1"
serde = "1"
