[package]
name = "wasm-bindgen-shared"
version = "0.2.89"
authors = ["The wasm-bindgen Developers"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/rustwasm/wasm-bindgen/tree/master/crates/shared"
homepage = "https://rustwasm.github.io/wasm-bindgen/"
documentation = "https://docs.rs/wasm-bindgen-shared"
description = """
Shared support between wasm-bindgen and wasm-bindgen cli, an internal
dependency.
"""
edition = "2018"
rust-version = "1.57"
