[package]
name = "wasm-bindgen-test-macro"
version = "0.3.42"
authors = ["The wasm-bindgen Developers"]
description = "Internal testing macro for wasm-bindgen"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rustwasm/wasm-bindgen"
edition = "2021"
rust-version = "1.57"
include = ["/LICENSE-*", "/src"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", default-features = false, features = [ "parsing", "proc-macro", "derive", "printing" ] }

[dev-dependencies]
wasm-bindgen-test = { path = "../test" }
trybuild = "1.0"
