[package]
authors = ["The wasm-bindgen Developers"]
description = "Internal testing macro for wasm-bindgen"
edition = "2021"
include = ["/LICENSE-*", "/src"]
license = "MIT OR Apache-2.0"
name = "wasm-bindgen-test-macro"
repository = "https://github.com/rustwasm/wasm-bindgen"
rust-version = "1.57"
version = "0.3.50"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", default-features = false, features = [
  "parsing",
  "proc-macro",
  "derive",
  "printing",
] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
trybuild = "1.0"
wasm-bindgen-test = { path = "../test" }

[lints]
workspace = true
