[package]
authors = ["The wasm-bindgen Developers"]
description = "Internal testing crate for wasm-bindgen"
edition = "2021"
include = ["/LICENSE-*", "/src"]
license = "MIT OR Apache-2.0"
name = "wasm-bindgen-test"
repository = "https://github.com/rustwasm/wasm-bindgen"
rust-version = "1.57"
version = "0.3.49"

[features]
default = ["std"]
msrv = ["wasm-bindgen/msrv", "wasm-bindgen-test-macro/msrv"]
std = ["wasm-bindgen/std", "js-sys/std", "wasm-bindgen-futures/std"]

[dependencies]
gg-alloc = { version = "1.0", optional = true }
js-sys = { path = '../js-sys', version = '=0.3.76', default-features = false }
wasm-bindgen = { path = '../..', version = '=0.2.99', default-features = false }
wasm-bindgen-futures = { path = '../futures', version = '=0.4.49', default-features = false }
wasm-bindgen-test-macro = { path = '../test-macro', version = '=0.3.49' }

[target.'cfg(target_arch = "wasm32")'.dependencies]
unstable-test-coverage = { package = "minicov", version = "0.3", optional = true }

[lints]
workspace = true

[lib]
test = false
