[package]
authors = ["The wasm-bindgen Developers"]
description = "Internal testing crate for wasm-bindgen"
edition = "2021"
include = ["/LICENSE-*", "/src"]
license = "MIT OR Apache-2.0"
name = "wasm-bindgen-test"
repository = "https://github.com/rustwasm/wasm-bindgen"
rust-version = "1.57"
version = "0.3.50"

[features]
default = ["std"]
std = ["wasm-bindgen/std", "js-sys/std", "wasm-bindgen-futures/std"]

[dependencies]
gg-alloc = { version = "1.0", optional = true }
js-sys = { path = '../js-sys', version = '=0.3.77', default-features = false }
wasm-bindgen = { path = '../..', version = '=0.2.100', default-features = false }
wasm-bindgen-futures = { path = '../futures', version = '=0.4.50', default-features = false }
wasm-bindgen-test-macro = { path = '../test-macro', version = '=0.3.50' }

[target.'cfg(all(target_arch = "wasm32", wasm_bindgen_unstable_test_coverage))'.dependencies]
minicov = "0.3"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(wasm_bindgen_unstable_test_coverage)'] }

[lints.clippy]
large_enum_variant = "allow"
new_without_default = "allow"
overly_complex_bool_expr = "allow"
too_many_arguments = "allow"
type_complexity = "allow"

[lib]
test = false
