[package]
name = "wasm-bindgen-threads-xform"
version = "0.2.92"
authors = ["The wasm-bindgen Developers"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/rustwasm/wasm-bindgen/tree/master/crates/threads-xform"
homepage = "https://rustwasm.github.io/wasm-bindgen/"
documentation = "https://docs.rs/wasm-bindgen-threads-xform"
description = """
Support for threading-related transformations in wasm-bindgen
"""
edition = "2021"
rust-version = "1.76"
include = ["/LICENSE-*", "/src"]

[dependencies]
anyhow = "1.0"
walrus = "0.21"
wasm-bindgen-wasm-conventions = { path = "../wasm-conventions", version = "=0.2.92" }

[dev-dependencies]
rayon = "1.0"
wasmprinter = "0.212"
wasmparser = "0.212"
wat = "1.0"

[[test]]
name = "all"
harness = false
