[package]
authors = ["The wasm-bindgen Developers"]
description = """
Support for threading-related transformations in wasm-bindgen
"""
documentation = "https://docs.rs/wasm-bindgen-threads-xform"
edition = "2021"
homepage = "https://rustwasm.github.io/wasm-bindgen/"
include = ["/LICENSE-*", "/src"]
license = "MIT OR Apache-2.0"
name = "wasm-bindgen-threads-xform"
repository = "https://github.com/rustwasm/wasm-bindgen/tree/master/crates/threads-xform"
rust-version = "1.76"
version = "0.2.100"

[dependencies]
anyhow = "1.0"
walrus = "0.23"
wasm-bindgen-wasm-conventions = { path = "../wasm-conventions", version = "=0.2.100" }

[dev-dependencies]
rayon = "1.0"
wasmparser = "0.214"
wasmprinter = "0.214"
wat = "1.0"

[lints]
workspace = true

[[test]]
harness = false
name = "all"
