[package]
name = "typescript-tests"
version = "0.1.0"
authors = ["The wasm-bindgen Developers"]
edition = "2018"
rust-version = "1.57"

[dependencies]
wasm-bindgen = { path = '../..' }
wasm-bindgen-futures = { path = '../futures' }
web-sys = { path = '../web-sys', features = [ 'HtmlElement', 'Node', 'Document' ] }
js-sys = { path = '../js-sys' }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"

[lib]
crate-type = ['cdylib']
