[package]
authors = ["The wasm-bindgen Developers"]
edition = "2021"
name = "typescript-tests"
publish = false
version = "0.0.0"

[dependencies]
js-sys = { path = '../js-sys' }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
wasm-bindgen = { path = '../..' }
wasm-bindgen-futures = { path = '../futures' }
web-sys = { path = '../web-sys', features = ['HtmlElement', 'Node', 'Document'] }

[lib]
crate-type = ['cdylib']

[lints]
workspace = true
