[package]
name = "wasm-bindgen-typescript"
version = "0.1.0"
authors = ["Santiago Pastorino <spastorino@gmail.com>"]

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

proc-macro2 = "0.4.8"
quote = "0.6"
syn = { version = "0.14", default-features = false }
wasm-bindgen = { path = "../..", default-features = false }
wasm-bindgen-backend = { path = "../backend", default-features = false }
