[package]
name = "wasm-bindgen-typescript"
version = "0.1.0"
authors = ["Santiago Pastorino <spastorino@gmail.com>"]

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", default-features = false }
wasm-bindgen = { path = "../..", default-features = false }
wasm-bindgen-backend = { path = "../backend", default-features = false }
