[package]
name = "wasm-bindgen-cli-support"
version = "0.1.3"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/alexcrichton/wasm-bindgen"
homepage = "https://github.com/alexcrichton/wasm-bindgen"
documentation = "https://docs.rs/wasm-bindgen"
description = """
Shared support for the wasm-bindgen-cli package, an internal dependency
"""

[dependencies]
base64 = "0.9"
parity-wasm = "0.27"
serde_json = "1.0"
wasm-bindgen-shared = { path = "../wasm-bindgen-shared", version = '0.1' }
wasm-gc-api = "0.1"
