[package]
name = "wasm-bindgen-cli"
version = "0.1.0"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/alexcrichton/wasm-bindgen"
homepage = "https://github.com/alexcrichton/wasm-bindgen"
documentation = "https://docs.rs/wasm-bindgen"
categories = ["wasm"]
description = """
Command line interface of the `#[wasm_bindgen]` attribute and project. For more
information see https://github.com/alexcrichton/wasm-bindgen.
"""

[dependencies]
docopt = "0.8"
parity-wasm = "0.27"
serde = "1.0"
serde_derive = "1.0"
wasm-bindgen-cli-support = { path = "../wasm-bindgen-cli-support", version = "0.1" }
wasm-bindgen-shared = { path = "../wasm-bindgen-shared", version = "0.1" }

[[bin]]
name = "wasm-bindgen"
path = "src/bin/wasm-bindgen.rs"

[[bin]]
name = "wasm2es6js"
path = "src/bin/wasm2es6js.rs"
