[package]
name = "wasm-bindgen-macro"
version = "0.1.0"
authors = ["Alex Crichton <alex@alexcrichton.com>"]

[lib]
proc-macro = true

[dependencies]
syn = { git = 'https://github.com/dtolnay/syn', features = ['full'] }
quote = { git = 'https://github.com/dtolnay/quote' }
proc-macro2 = { version = "0.1", features = ["unstable"] }
serde_json = "1"
wasm-bindgen-shared = { path = "../wasm-bindgen-shared" }
