[package]
name = "wasm-bindgen-macro"
version = "0.1.0"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/alexcrichton/wasm-bindgen"
homepage = "https://github.com/alexcrichton/wasm-bindgen"
documentation = "https://docs.rs/wasm-bindgen"
description = """
Definition of the `#[wasm_bindgen]` attribute, an internal dependency
"""

[lib]
proc-macro = true

[dependencies]
syn = { version = '0.12', features = ['full'] }
quote = '0.4'
proc-macro2 = { version = "0.2", features = ["nightly"] }
serde_json = "1"
wasm-bindgen-shared = { path = "../wasm-bindgen-shared", version = "0.1.0" }
