[package]
name = "wasm-bindgen-wasm-conventions"
version = "0.2.92"
authors = ["The wasm-bindgen developers"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/rustwasm/wasm-bindgen/tree/master/crates/wasm-conventions"
homepage = "https://rustwasm.github.io/wasm-bindgen/"
documentation = "https://docs.rs/wasm-bindgen-wasm-conventions"
description = "Utilities for working with Wasm codegen conventions (usually established by LLVM/lld)"
edition = "2018"
rust-version = "1.57"

[dependencies]
leb128 = "0.2"
walrus = "0.20.2"
# Matching the version `walrus` depends on.
wasmparser = "0.80"
anyhow = "1.0"
