[package]
authors = ["The wasm-bindgen developers"]
description = "Utilities for working with Wasm codegen conventions (usually established by LLVM/lld)"
documentation = "https://docs.rs/wasm-bindgen-wasm-conventions"
edition = "2021"
homepage = "https://rustwasm.github.io/wasm-bindgen/"
include = ["/LICENSE-*", "/src"]
license = "MIT OR Apache-2.0"
name = "wasm-bindgen-wasm-conventions"
repository = "https://github.com/rustwasm/wasm-bindgen/tree/master/crates/wasm-conventions"
rust-version = "1.76"
version = "0.2.100"

[dependencies]
leb128 = "0.2"
walrus = "0.23"
# Matching the version `walrus` depends on.
anyhow = "1.0"
log = "0.4"
wasmparser = "0.214"

[lints]
workspace = true
