[package]
name = "wasm-bindgen-wasm-interpreter"
version = "0.2.50"
authors = ["The wasm-bindgen Developers"]
license = "MIT/Apache-2.0"
repository = "https://github.com/rustwasm/wasm-bindgen/tree/master/crates/wasm-interpreter"
homepage = "https://rustwasm.github.io/wasm-bindgen/"
documentation = "https://docs.rs/wasm-bindgen-wasm-interpreter"
description = """
Micro-interpreter optimized for wasm-bindgen's use case
"""
edition = '2018'

[dependencies]
failure = "0.1"
log = "0.4"
walrus = "0.12.0"

[dev-dependencies]
tempfile = "3"
