[package]
authors = ["The wasm-bindgen Developers"]
description = """
Micro-interpreter optimized for wasm-bindgen's use case
"""
documentation = "https://docs.rs/wasm-bindgen-wasm-interpreter"
edition = "2021"
homepage = "https://rustwasm.github.io/wasm-bindgen/"
include = ["/LICENSE-*", "/src"]
license = "MIT OR Apache-2.0"
name = "wasm-bindgen-wasm-interpreter"
repository = "https://github.com/rustwasm/wasm-bindgen/tree/main/crates/wasm-interpreter"
rust-version = "1.76"
version = "0.2.100"

[dependencies]
anyhow = "1.0"
log = "0.4"
walrus = "0.23"
wasm-bindgen-wasm-conventions = { path = "../wasm-conventions", version = "0.2.100" }

[dev-dependencies]
tempfile = "3"
wat = "1.0"

[lints]
workspace = true
