[package]
name = "web-sys"
version = "0.1.0"
authors = ["The wasm-bindgen Developers"]
readme = "./README.md"

[lib]
doctest = false
test = false

[build-dependencies]
env_logger = "0.5.10"
failure = "0.1.2"
wasm-bindgen-webidl = { path = "../webidl", version = "=0.2.17" }
sourcefile = "0.1"

[dependencies]
wasm-bindgen = { path = "../..", version = "0.2.19" }
js-sys = { path = '../js-sys', version = '0.2.4' }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
futures = "0.1"
wasm-bindgen-test = { path = '../test', version = '0.2.19' }
wasm-bindgen-futures = { path = '../futures', version = '0.2.19' }
