[package]
name = "webidl-tests"
version = "0.0.0"
authors = ["The wasm-bindgen Developers"]
edition = "2021"
publish = false

[lib]
test = false
doctest = false
path = 'lib.rs'

[dependencies]
js-sys = { path = '../js-sys' }
wasm-bindgen-futures = { path = '../futures' }
wasm-bindgen = { path = '../..' }

[build-dependencies]
wasm-bindgen-webidl = { path = "../webidl" }

[dev-dependencies]
wasm-bindgen-test = { path = '../test' }

[[test]]
name = 'wasm'
path = 'main.rs'
